--- a/package.json
+++ b/package.json
@@ -27,9 +27,24 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "autoprefixer": "^9.0.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^3.0.0",
+    "eslint": "^7.26.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.3.0",
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^2.3.0",
+    "style-loader": "^2.0.0",
     "typescript": "^4.4.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
